# mlops-llm-trade-crypto

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
docker-compose/: Makefile  README.md  elasticsearch.yml  news-signal-historical.yml  news-signal-live.yml  redpanda.yml  technical-indicators-historical.yml  technical-indicators-live.yml  technical-indicators-pipeline.yml
services/candles/: Dockerfile  Makefile  README.md  config.py  historical.settings.env  pyproject.toml  run.py  settings.env
services/candles/state/candles_consumer_group/tumbling_window_60000_reduce/trades/0/: 000017.sst  000018.sst  000019.sst  000020.sst  IDENTITY  LOG  MANIFEST-000005
services/news/: Makefile  README.md  config.py  historical.settings.env  news_data_source.py  news_downloader.py  pyproject.toml  run.py  settings.env
services/news-signal/: Dockerfile  Makefile  README.md  config.py  fine_tuning.py  golden_dataset.py  historical.settings.env  live.settings.env  ollama.env  pyproject.toml  run.py  settings.env
services/news-signal/data/: instruction_dataset_claude_10k.jsonl  instruction_dataset_ollama_10k.jsonl
services/news-signal/llms/: base.py  claude.py  config.py  dummy.py  factory.py  ollama_model.py
services/news-signal/outputs/checkpoint-120/: adapter_config.json  trainer_state.json
services/news/sources/: factory.py  historical_data_source.py  news_data_source.py  news_downloader.py
services/prediction-api/: Cargo.toml  Makefile  README.md
services/prediction-api/src/: main.rs
services/price-predictor/: Makefile  README.md  config.py  feature_reader.py  price_predictor.py  pyproject.toml  run.py  sinks.py  training.py  training.settings.env
services/price-predictor/models/: dummy_model.py
services/technical-indicators/: .dockerignore  Dockerfile  Makefile  README.md  candle.py  config.py  pyproject.toml  run.py  technical_indicators.py
services/to-feature-store/: Dockerfile  Makefile  README.md  config.py  pyproject.toml  run.py  settings.env  sinks.py  technical_indicators.csv
services/trades/: Dockerfile  Makefile  README.md  README_DOCKERFILE.md  config.py  historical.settings.env  live.settings.env  mock_run.py  multistage.Dockerfile  naive.Dockerfile  pyproject.toml  run.py  settings.env
services/trades/kraken_api/: mock.py  rest.py  trade.py  websocket.py
