[project]
name = "candles"
version = "0.1.0"
description = "MLOps Crypto Trading Real-time Data Service"
keywords = ["MLOps", "Trading", "LLM", "Machine Learning"]
authors = [{ name = "Benito Martin"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.2",
    "pydantic-settings>=2.6.1",
    "quixstreams>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pip>=24.3.1",
    "ruff>=0.8.1",
]

# # Build system configuration
# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
