[project]
name = "price-predictor"
version = "0.1.0"
description = "MLOps Crypto Trading Real-time Data Service"
keywords = ["MLOps", "Trading", "LLM", "Machine Learning"]
authors = [{ name = "Benito Martin"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "comet-ml>=3.47.6",
    "elasticsearch>=8.17.0",
    "hopsworks>=4.1.4",
    "joblib>=1.4.2",
    "loguru>=0.7.3",
    "optuna>=4.1.0",
    "pre-commit>=4.0.1",
    "pyarrow>=18.1.0",
    "pydantic-settings>=2.6.1",
    "quixstreams>=3.4.0",
    "scikit-learn>=1.6.0",
    "xgboost>=2.1.3",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "C",  # mccabe rules
    "F",  # pyflakes rules
    "E",  # pycodestyle error rules
    "W",  # pycodestyle warning rules
    "B",  # flake8-bugbear rules
    "I",  # isort rules
]

ignore = [
    "C901",  # max-complexity-10
    "E501",  # line-too-long
]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"
