[project]
name = "trades"
version = "0.1.0"
description = "MLOps Crypto Trading Real-time Data Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.2",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "quixstreams==3.3.0",
    "websocket-client>=1.8.0",
    "websockets>=14.1",
]

[project.optional-dependencies]
dev = [
       "pip>=24.2",
       "ruff>=0.2.0, <1"
       ]

[tool.ruff.lint]
select = [
    "F",  # pyflakes rules
    "E",  # pycodestyle error rules
    "W",  # pycodestyle warning rules
    "B",  # flake8-bugbear rules
    "I",  # isort rules
]

ignore = [
    "E501",  # line-too-long
]

[tool.ruff.format]
indent-style = "space"